kubernetes/app-account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-account-deployment
spec:
  selector:
    matchLabels:
      app: spring-account
  replicas: 1
  template:
    metadata:
      labels:
        app: spring-account
    spec:
      containers:
        - name: spring-account
          image: shoon2430/account-service:v2
          ports:
            - containerPort: 9005
