kubernetes/app-account-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-db-server-service
  labels:
    app: account-db
    tier: database
spec:
  ports:
    - port: 8005
      targetPort: 3306
      name: db-port
  selector: # mysql Pod Should contain same labels
    app: account-db
    tier: database
  clusterIP: None # We Use DNS, Thus ClusterIP is not relevant
