kubernetes/app-account-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: spring-account-service
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  type: NodePort
  ports:
    - port: 9005
      targetPort: 9005
      protocol: TCP
      name: server-port
  selector:
    app: spring-account
